--- a/IDE/Vdom/local.properties
+++ b/IDE/Vdom/local.properties
@@ -1,2 +1,2 @@
-FLEX_HOME = C:\\Program Files\\Adobe\\Flex Builder 2 Plug-in\\Flex SDK 2
+FLEX_HOME = C:/Program Files/Adobe/Flex Builder 3 Plug-in/sdks/3.0.0
 COMPONENT_ROOT = vdom
