--- a/TypeEditor/v.02/.project
+++ b/TypeEditor/v.02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ObjectEditor2</name>
+	<name>ObjectEditor2c</name>
 	<comment></comment>
 	<projects>
 	</projects>
