--- a/IDE/v.02/modules/ApplicationsManagment/.settings/org.eclipse.core.resources.prefs
+++ b/IDE/v.02/modules/ApplicationsManagment/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Jul 19 17:29:27 NOVST 2011
+#Thu Jul 28 17:15:18 NOVST 2011
 eclipse.preferences.version=1
+encoding//locale/ru_RU/ApplicationsManagment_General.properties=UTF-8
 encoding/<project>=utf-8
