--- a/IDE/v.02/modules/DB/.settings/org.eclipse.core.resources.prefs
+++ b/IDE/v.02/modules/DB/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Mon Oct 31 10:57:51 NOVT 2011
+#Mon Jan 09 11:30:19 GMT+07:00 2012
 eclipse.preferences.version=1
+encoding//locale/fr_FR/DataBase_General.properties=UTF-8
 encoding//locale/ru_RU/DataBase_General.properties=UTF-8
 encoding/<project>=utf-8
