git-svn-id: http://svn.vdombox.ru/flextools/trunk@8826 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Preview/.settings/org.eclipse.core.resources.prefs
+++ b/IDE/v.02/modules/Preview/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Aug 22 14:59:03 NOVST 2012
+#Fri Mar 29 12:13:19 NOVT 2013
 eclipse.preferences.version=1
+encoding//locale/ru_RU/Preview_General.properties=UTF-8
 encoding/<project>=utf-8
